;;;; -*- coding: utf-8; fill-column: 78 -*-
  * optimization: multidimensional array accesses in the absence of type
    information regarding array rank are approximately 10% faster due to
    open coding of ARRAY-RANK.
  * bug fix: disable address space randomization Linux/x86-64 as well,
    not just x86-64. (reported by Ken Olum)
  * bug fix: #201; type inference for CONS and ARRAY types could derive
    wrong results in the presence of eg. RPLACA or ADJUST-ARRAY.
  * bug fix: special variables with a proclaimed specific subtype of FUNCTION
    could not be assigned to or bound with PROGV. (reported by Lorenz
    Mösenlechner)

changes in sbcl-1.0.28 relative to 1.0.27:
  * a number of bugs in cross-compilation have been fixed, with the ultimate
    result that building under (at least) clisp should be much more reliable.
  * minor incompatible changes: echo-streams now propagate unread-char to the
    underlying input stream, and no longer permit unreading more than one
    character.
  * improvement: on x86/x86-64 Lisp call frames now have the same layout as C
    frames, allowing for instance more reliable backtraces.
  * improvement: the debugger REPL can now reference lexical variables
    by name directly for code compiled with (DEBUG 3).
  * improvement: errors from malformed declarations now have better source
    paths associated with them. (thanks to Tobias Rittweiler)
  * optimization: faster local calls on x86/x86-64
  * bug fix: some error messages for out-of-bound array indexes confused the
    index and the bound. (thanks to Stas Boukarev)
  * bug fix: pretty printing malformed DEFPACKAGE forms (thanks to Sidney
    Markowitz)
  * bug fix: running regressions tests in shells without OSTYPE set now works.
    (reported by Harald Hanche-Olsen)
  * bug fix: more robust static space exhaustion signalling from
    MAKE-STATIC-VECTOR (thanks to Daniel Lowe)
  * bug fix: (SETF DOCUMENTATION) for anonymous function now throws the